# Google-Hashcode

./: .gitmodules  .project
2016/: .cproject  CMakeLists.txt  README.md  example.in  example.out
2016/include/: gsl.h  gsl_assert.h  gsl_util.h  span.h  string_span.h
2016/src/main/berlin/nadolski/hashcode/: Command.cpp  Command.h  Drone.cpp  Drone.h  MyStrategy.cpp  MyStrategy.h  NearestWarehouse.cpp  NearestWarehouse.h  Order.cpp  Order.h  Problem.cpp  Problem.h  ProblemState.cpp  ProblemState.h  SimpleStrategy.cpp  SimpleStrategy.h  Simulation.cpp  Simulation.h  Strategy.cpp  Strategy.h  Warehouse.cpp  Warehouse.h  hashcode.cpp  my_strategy.cpp  nearest_warehouse.cpp  simple_strategy.cpp  simulate.cpp  simulation.cpp
src/main/berlin/nadolski/hashcode/: Problem.cpp  Problem.h  SimpleStrategy.h  Strategy.h  hashcode.cpp
